# lvgl-sdl-demo

./: .gitmodules  CMakeLists.txt  Meter.eez-project  Meter.eez-project-ui-state  README.md  eez-framework-conf.h  lv_conf.h
lvgl_drv/: lv_port_indev.c  lv_sdl_disp.c
src/: main.c
src/ui/: flow_def.c  flow_def.h  fonts.h  images.c  images.h  screens.c  screens.h  ui_image_img_hand_hour.c  ui_image_img_hand_min.c  ui_image_logo.c  ui_image_web_site.c
